# Valor-Go

./: README.md  README_CN.md
doc/: investigation_report.pptx
doc/feasibility_report/: feasibility_report.md
doc/final_report/: Final_Report.md  Project_introduction.md  ~$final_report_v0.pptx
doc/interim_report/: Valor-Go Interim Report.pptx  Valor-Go Interim Report_v2_presentation.pptx
doc/investigation_report/: investigation_report.md
doc/lxn/: 3FS（的FUSE底层模块）前期调研.md  CMakeLists.txt  Cargo.toml  FuseAppConfig.rs  FuseClients.rs  FuseConfig.rs  FuseConfigFetcher.rs  FuseLauncherConfig.rs  FuseMainLoop.rs  FuseOps.rs  IoRing.rs  IovTable.rs  PioV.rs  UserConfig.rs  eBPF调研new.md  ffi.rs  hf3fs_fuse.rs  中期汇报-why.pptx  重要性分析.pptx
doc/lxn/src/: lib.rs
doc/lxn/test/: Cargo.toml  build.rs  项目框架.md
doc/lxn/test/cpp/: CMakeLists.txt  main.cpp
doc/lxn/test/include/: rust_fuse_ffi.h
doc/lxn/test/src/: ffi.rs  fuse_app_config.rs  fuse_application.rs  fuse_clients.rs  fuse_config.rs  lib.rs  新建 文本文档.txt
doc/lzc/: 3FS_deploy_guide.md  FAT32调研.md  Rust改写调研.md  Valor-Go Interim Report.pptx  storage_setup.sh
doc/lzc/setup/: 3FS_deploy_guide.md  meta_setup.sh  storage2_setup.sh  storage3_setup.sh  storage4_setup.sh  storage5_setup.sh
doc/new/.cargo/: config.toml
doc/new/src/fuse/: CMakeLists.txt  Cargo.toml  FuseAppConfig.cc  FuseApplication.cc  FuseApplication.h  FuseClients.cc  FuseClients.h  FuseConfig.h  FuseConfigFetcher.cc  FuseConfigFetcher.h  FuseLauncherConfig.cc  FuseLauncherConfig.h  FuseMainLoop.cc  FuseMainLoop.h  FuseOps.cc  FuseOps.h  IoRing.cc  IoRing.h  IovTable.cc  IovTable.h  PioV.cc  PioV.h  UserConfig.cc  UserConfig.h  hf3fs_fuse.cpp  hf3fs_fuse.h
doc/new/src/fuse/src/: FuseAppConfig.rs  FuseApplication.rs  FuseClients.rs  FuseConfig.rs  FuseLauncherConfig.rs  FuseOps.rs  ffi.rs  hf3fs_fuse.rs  lib.rs
doc/rzz/: 3FS创新点简要分析.md  Ray调研.md  Rust改写、开发3FS FUSE模块的可行性.md  fuse分析.md  rust改写遇到的困难.md  中期汇报How.pptx  代码迁移过程.md  原FUSE模块文件功能分析与运行逻辑.md  改写后FUSE模块文件功能分析与运行逻辑.md  立项依据.md
doc/rzz/ongoing_part/: FuseOps.rs  hf3fs_fuse.rs
doc/rzz/test/: Cargo.toml  build.rs  build_cpp.bat  改写进度.md  项目框架.md
doc/rzz/test/cpp/: CMakeLists.txt  main.cpp  rust_fuse_ffi.h
doc/rzz/test/include/: rust_fuse_ffi.h
doc/rzz/test/src/: ffi.rs  fuse_config_fetcher.rs  fuse_main_loop.rs  fuse_ops.rs  hf3fs_fuse.rs  lib.rs  mgmtd_client.rs
doc/wqh/: IovTable.rs  PioV.rs  Rust_part.md  USTC_PPT模板 (1).pptx  UserConfig.rs  XV-6.md  XV_6_1.md  final.md  final.pptx  io_ring.rs  相关工作.md
doc/wqh/IoRing_test/: Cargo.toml
doc/wqh/IoRing_test/src/: lib.rs  main.rs
doc/wqh/ioring_demo/ioring_demo/: Cargo.toml
doc/wqh/ioring_demo/ioring_demo/src/: ioring.rs  main.rs
doc/wqh/iovtable/: Cargo.toml
doc/wqh/iovtable/src/: main.rs
doc/wqh/piov/: Cargo.toml
doc/wqh/piov/src/: main.rs
doc/wqh/user_config/: Cargo.toml  main.cpp
doc/wqh/user_config/src/: lib.rs
doc/yyl/: 3fs 背景知识调研1.md  3fs-mgmtd_part.md  file_aio.md  midterm.pptx  阿里云上搭建3fs完全指南 by 杨奕麟.md  阿里云上搭建3fs简易指南 by 杨奕麟.md  阿里云上搭建3fs部署经验 by 杨奕麟.md
lab4/: README.md
lab4/valor-go_lab4/: deploy.md  run_benchmark.sh  test_and_analysis.md
lab4/valor-go_lab4/experiment_statistic/: gpu_log_0_1024_1024_16_99_0.csv  gpu_log_0_1024_128_16_99_0.csv  gpu_log_0_1024_256_16_99_0.csv  gpu_log_0_1024_512_16_99_0.csv  gpu_log_0_512_2048_16_10_0.csv  gpu_log_0_512_2048_16_20_0.csv  gpu_log_0_512_2048_16_30_0.csv  gpu_log_0_512_2048_16_31_0.csv  gpu_log_0_512_2048_16_32_0.csv  gpu_log_0_512_2048_16_33_0.csv  gpu_log_0_512_2048_16_34_0.csv  gpu_log_0_512_2048_16_35_0.csv  gpu_log_0_512_2048_16_99_0.csv  gpu_log_0_512_2048_16_99_512.csv  gpu_log_0_64_2048_16_99_0.csv  gpu_log_0_64_2048_1_99_0.csv  gpu_log_0_64_2048_2_99_0.csv  gpu_log_0_64_2048_32_99_0.csv  gpu_log_0_64_2048_4_99_0.csv  gpu_log_0_64_2048_8_99_0.csv  gpu_log_128_512_2048_16_10_0.csv  gpu_log_128_512_2048_16_20_0.csv  gpu_log_128_512_2048_16_30_0.csv  gpu_log_128_512_2048_16_31_0.csv  gpu_log_128_512_2048_16_32_0.csv  gpu_log_128_512_2048_16_33_0.csv  gpu_log_128_512_2048_16_34_0.csv  gpu_log_128_512_2048_16_35_0.csv  gpu_log_128_512_2048_16_99_0.csv  gpu_log_128_512_2048_16_99_512.csv  gpu_log_16_64_2048_16_99_0.csv  gpu_log_16_64_2048_1_99_0.csv  gpu_log_16_64_2048_2_99_0.csv  gpu_log_16_64_2048_32_99_0.csv  gpu_log_16_64_2048_4_99_0.csv  gpu_log_16_64_2048_8_99_0.csv
src/3fs_rustfuse/src/fuse/: FuseClients.cc  FuseConfigFetcher.cc  FuseOps.cc  cbindgen.toml  hf3fs_fuse.cpp
src/3fs_rustfuse/src/fuse/src/: FuseAppConfig.rs  FuseClients.rs  FuseConfig.rs  IovTable.rs  PioV.rs  UserConfig.rs  mgmtd_client.rs
