[package]
name = "hf3fs_fuse"
version = "0.1.0"
edition = "2021"

[workspace]

[lib]
name = "hf3fs_fuse"
crate-type = ["staticlib", "cdylib"]

[dependencies]
fuser = "0.14"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
simplelog = "0.12"
once_cell = "1.0"

[build-dependencies]
cc = "1.0" 