[package]
name = "rust_fuse"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_fuse"
crate-type = ["cdylib"]  # 生成 .dll 或 .so

[dependencies]
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.10"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
cc = "1.0"