[package]
name = "rust_cpp_mixed"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
flatbuffers = "23.5.26"
hostname = "0.3"
fuser = "0.15.1"
libc = "0.2"

[build-dependencies]
cc = "1.0"
cmake = "0.1"

[lib]
name = "rust_cpp_mixed"
crate-type = ["cdylib", "staticlib"]