[package]
name = "rust_cpp_mixed"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
flatbuffers = "23.5.26"
hostname = "0.3"  # 确保只保留这一个
fuser = "0.15.1"
libc = "0.2"
reqwest = { version = "0.11", features = ["json"] }  # 新增的 HTTP 客户端
anyhow = "1"
thiserror = "1"
log = "0.4"
env_logger = "0.10"

[build-dependencies]
cc = "1.0"
cmake = "0.1"

[dev-dependencies]
mockito = "0.31"  # 测试专用的 mock 库

[lib]
name = "rust_cpp_mixed"
crate-type = ["cdylib", "staticlib"]