[package]
name = "hf3fs_fuse"
version = "0.1.0"
edition = "2021"

[workspace]

[lib]
name = "hf3fs_fuse"
crate-type = ["staticlib", "cdylib"]

[dependencies]
# From 3FS-main (conflict resolved)
fuser = "0.11.0"

# Common / from 3FS-main
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
simplelog = "0.12"
once_cell = "1.0"

# From original file (no conflict)
futures = "0.3"
flatbuffers = "23.5.26"
hostname = "0.3"
libc = "0.2"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
env_logger = "0.10"
tokio-uring = "0.4.0"
uuid = { version = "1.2.2", features = ["v4"] }
async-trait = "0.1.57"
dashmap = "5.4.0"

[build-dependencies]
cc = "1.0"
cmake = "0.1"

[dev-dependencies]
mockito = "0.31"